--- a/index.html
+++ b/index.html
@@ -20,11 +20,11 @@
   </head>
 
   <body>
-
+    <header></header>
+    <main></main>
+    <footer></footer>
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="js/main.js"></script>
   </body>
-
-  
 </html>
