--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8" />
     <title>pronavi</title>
     <meta
-      name="description"
+      name="pronavi"
       content="テキストテキストテキストテキストテキストテキスト"
     />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
@@ -16,12 +16,25 @@
       href="https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@400;700&display=swap"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="css/style.css" />
+    <!-- 共通CSS -->
+    <link rel="stylesheet" href="css/reset.css" />
+    <link rel="stylesheet" href="css/common.css" />
+
+    <!-- セクションごとのCSS -->
+    <link rel="stylesheet" href="css/header.css" />
+    <link rel="stylesheet" href="css/mainvisual.css" />
+    <link rel="stylesheet" href="css/about.css" />
+    <link rel="stylesheet" href="css/voice.css" />
+    <link rel="stylesheet" href="css/reason.css" />
+    <link rel="stylesheet" href="css/study.css" />
+    <link rel="stylesheet" href="css/flow.css" />
+    <link rel="stylesheet" href="css/instructors.css" />
+    <link rel="stylesheet" href="css/support.css" />
+    <link rel="stylesheet" href="css/price.css" />
+    <link rel="stylesheet" href="css/footer.css" />
   </head>
 
   <body>
-
-
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="js/main.js"></script>
   </body>
