--- a/index.html
+++ b/index.html
@@ -35,9 +35,9 @@
   </head>
 
   <body>
+
+    <div class="about"></div>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="js/main.js"></script>
   </body>
 </html>
-
-konnbannha
