--- a/index.html
+++ b/index.html
@@ -31,6 +31,11 @@
 
 
   <body>
+    <header></header>
+
+    <main></main>
+
+    <footer></footer>
 
     <div class="about"></div>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
