--- a/index.html
+++ b/index.html
@@ -2,43 +2,63 @@
 <html lang="ja">
 
 <head>
-  <meta charset="utf-8" />
+  <meta charset="utf-8">
   <title>pronavi</title>
-  <meta name="pronavi" content="テキストテキストテキストテキストテキストテキスト" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <link rel="shortcut icon" href="img/favicon.png" />
-  <link rel="stylesheet" href="https://unpkg.com/ress/dist/ress.min.css" />
-  <link rel="preconnect" href="https://fonts.googleapis.com" />
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-  <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@400;700&display=swap" rel="stylesheet" />
-  <!-- 共通CSS -->
-  <link rel="stylesheet" href="css/reset.css" />
-  <link rel="stylesheet" href="css/common.css" />
-
-  <!-- セクションごとのCSS -->
-  <link rel="stylesheet" href="css/header.css" />
-  <link rel="stylesheet" href="css/mainvisual.css" />
-  <link rel="stylesheet" href="css/about.css" />
-  <link rel="stylesheet" href="css/voice.css" />
-  <link rel="stylesheet" href="css/reason.css" />
-  <link rel="stylesheet" href="css/study.css" />
-  <link rel="stylesheet" href="css/flow.css" />
-  <link rel="stylesheet" href="css/instructors.css" />
-  <link rel="stylesheet" href="css/support.css" />
-  <link rel="stylesheet" href="css/price.css" />
-  <link rel="stylesheet" href="css/footer.css" />
+  <meta name="description" content="テキストテキストテキストテキストテキストテキスト">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="shortcut icon" href="img/favicon.png">
+  <link rel="stylesheet" href="https://unpkg.com/ress/dist/ress.min.css">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@400;700&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="css/style.css">
 </head>
 
+<body>
+  <header></header>
 
-  <body>
-    <header></header>
+  <main>
+    <section class="mainvisual">
 
-    <main></main>
+    </section>
 
-    <footer></footer>
+    <section class="about">
 
-    <div class="about"></div>
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-    <script src="js/main.js"></script>
-  </body>
+    </section>
+
+    <section class="voice">
+
+    </section>
+
+    <section class="reason">
+
+    </section>
+
+    <section class="study">
+
+    </section>
+
+    <section class="flow">
+
+    </section>
+
+    <section class="instructors">
+
+    </section>
+
+    <section class="support">
+
+    </section>
+    
+    <section class="price">
+
+    </section>
+  </main>
+
+  <footer></footer>
+
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+  <script src="js/main.js"></script>
+</body>
+
 </html>
