ヘッダーの中身更新

--- a/index.html
+++ b/index.html
@@ -15,7 +15,11 @@
 </head>
 
 <body>
-  <header></header>
+  <header>
+    <a href="#">
+      <img src="img/logo.png" alt="header-logo">
+    </a>
+  </header>
 
   <main>
     <section class="mainvisual">
@@ -25,7 +29,7 @@
     <section class="about">
 
     </section>
-
+    
     <section class="voice">
 
     </section>
