“reason記入しています”

--- a/index.html
+++ b/index.html
@@ -32,13 +32,33 @@
     <section class="about">
 
     </section>
-    
+
     <section class="voice">
 
     </section>
 
-    <section class="reason">
-
+    <section class="reason" id="reason">
+      <div class="section-wrapper">
+        <div class="section-header">
+          <p class="section-subtitle">Why Choose Us?</p>
+          <h2 class="section-title">プロナビが選ばれる3つの理由</h2>
+        </div>
+        <div class="reason-list">
+          <div class="reason-item">
+            <div class="reason-title">REASON 1
+              <h3 class="reason-heading">一人ひとりに最適化されたカリキュラムで、確かなスキルを身につける。</h3>
+            </div>
+            <div class="reason-content">
+              <img src="img/reason1.jpg">
+              <div class="reason-text">
+                <p>専属コンサルタントは、現役のプロエンジニア。</p>
+                <p>学習目標の設定から、最適な学習プランの提案、日々のモチベーションサポートまで、あなたの成長に本気で寄り添います。</p>
+                <p>性格診断をもとに、あなたに最も合うコンサルタントが担当します。</p>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
     </section>
 
     <section class="study">
@@ -56,7 +76,7 @@
     <section class="support">
 
     </section>
-    
+
     <section class="price">
 
     </section>
