--- a/index.html
+++ b/index.html
@@ -18,11 +18,54 @@
 </head>
 
 <body>
-  <header>
-    <a href="#">
-      <img src="img/logo.png" alt="header-logo">
-    </a>
-  </header>
+    <header>
+      <div class="wrapper">
+        <h1 class="header-logo">
+          <a href="#">
+            <img src="img/logo.png" alt="header-logo" />
+          </a>
+        </h1>
+
+        <nav class="nav-menu">
+          <ul>
+            <li>
+              <a href="#about"
+                ><span class="material-symbols-outlined">computer</span
+                >プロナビとは</a
+              >
+            </li>
+            <li>
+              <a href="#reason"
+                ><span class="material-symbols-outlined">check_circle</span
+                >選ばれる理由</a
+              >
+            </li>
+            <li>
+              <a href="#support"
+                ><span class="material-symbols-outlined">school</span
+                >学習サポート</a
+              >
+            </li>
+            <li>
+              <a href="#price"
+                ><span class="material-symbols-outlined">event_note</span
+                >受講プラン</a
+              >
+            </li>
+            <li>
+              <a href="#faq"
+                ><span class="material-symbols-outlined">chat_bubble</span
+                >FAQ</a
+              >
+            </li>
+          </ul>
+        </nav>
+
+        <a href="#" class="btn btn-gradient"
+          ><span>無料カウンセリングを予約する</span></a
+        >
+      </div>
+    </header>
 
   <main>
     <section class="mainvisual">
@@ -87,53 +130,4 @@
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
   <script src="js/main.js"></script>
 </body>
-
-
-    <header>
-      <div class="wrapper">
-        <h1 class="header-logo">
-          <a href="#">
-            <img src="img/logo.png" alt="header-logo" />
-          </a>
-        </h1>
-
-        <nav class="nav-menu">
-          <ul>
-            <li>
-              <a href="#about"
-                ><span class="material-symbols-outlined">computer</span
-                >プロナビとは</a
-              >
-            </li>
-            <li>
-              <a href="#reason"
-                ><span class="material-symbols-outlined">check_circle</span
-                >選ばれる理由</a
-              >
-            </li>
-            <li>
-              <a href="#support"
-                ><span class="material-symbols-outlined">school</span
-                >学習サポート</a
-              >
-            </li>
-            <li>
-              <a href="#price"
-                ><span class="material-symbols-outlined">event_note</span
-                >受講プラン</a
-              >
-            </li>
-            <li>
-              <a href="#faq"
-                ><span class="material-symbols-outlined">chat_bubble</span
-                >FAQ</a
-              >
-            </li>
-          </ul>
-        </nav>
-
-        <a href="#" class="btn btn-gradient"
-          ><span>無料カウンセリングを予約する</span></a
-        >
-      </div>
-    </header>
+</html>
