“メインビジュアル作業”

--- a/index.html
+++ b/index.html
@@ -85,7 +85,9 @@
 
     <main>
       <section class="mainvisual">
-
+        <div class="hero">
+          <div class="fade-bg"></div>
+        </div>
       </section>
 
       <section class="about"></section>
