“変更しました”

--- a/index.html
+++ b/index.html
@@ -121,12 +121,43 @@
                 <img src="img/reason1.jpg" />
                 <div class="reason-text">
                   <p>専属コンサルタントは、現役のプロエンジニア。</p>
-                  <p>
-                    学習目標の設定から、最適な学習プランの提案、日々のモチベーションサポートまで、あなたの成長に本気で寄り添います。
-                  </p>
-                  <p>
-                    性格診断をもとに、あなたに最も合うコンサルタントが担当します。
-                  </p>
+                  <p>学習目標の設定から、最適な学習プランの提案、日々のモチベーションサポートまで、あなたの成長に本気で寄り添います。</p>
+                  <p>性格診断をもとに、あなたに最も合うコンサルタントが担当します。</p>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="reason-list">
+            <div class="reason-item">
+              <div class="reason-title">
+                REASON 2
+                <h3 class="reason-heading">
+                  あなたのレベルに合わせた最適な学習プランを、プロのコーチが提案。
+                </h3>
+              </div>
+              <div class="reason-content">
+                <img src="img/reason2.jpg" />
+                <div class="reason-text">
+                  <p>効率的にスキルを伸ばすために、毎週の課題と学習進捗を一緒に管理します。</p>
+                  <p>わからないことは、公式LINEから24時間いつでも質問OK。</p>
+                  <p>つまずきをその場で解決しながら、安心して学びを進められます。</p>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="reason-list">
+            <div class="reason-item">
+              <div class="reason-title">
+                REASON 3
+                <h3 class="reason-heading">
+                  案件獲得までを徹底サポート。自走できる力を身につける。
+                </h3>
+              </div>
+              <div class="reason-content">
+                <img src="img/reason3.jpg" />
+                <div class="reason-text">
+                  <p>学習後は、実際に案件を獲得するための実践的なサポートを行います。</p>
+                  <p>プロの営業担当が商談に同行し、リアルな営業の流れを体感。実際に受注した案件に関するフォローも行うため、安心して一歩を踏み出せます。</p>
                 </div>
               </div>
             </div>
