--- a/index.html
+++ b/index.html
@@ -169,7 +169,15 @@
 
       <section class="flow"></section>
 
-      <section class="instructors"></section>
+      <section class="instructors">
+        <div class="section-wrapper">
+          <div class="section-header">
+            <p class="section-subtitle">instructors</p>
+            <h2 class="section-title">講師紹介</h2>
+          </div> 
+        </div>
+        
+      </section>
 
       <section class="support"></section>
 
