--- a/index.html
+++ b/index.html
@@ -99,9 +99,81 @@
         </div>
       </section>
 
-      <section class="about"></section>
+      <section class="about">
+        <section id="about" class="about">
+          <div class="section-wrapper">
+            <div class="about-inner">
+              <div class="about-text">
+                <p class="section-subtitle">About</p>
+                <h2 class="section-title">Pro Naviとは</h2>
+                <p class="about-lead">
+                  ProNaviは、在宅ワークを叶えたい方のための6ヶ月集中プログラミングスクール。
+                </p>
+                <p>
+                  あなたのレベルに合わせた専用プランで、自宅学習を徹底サポート。<br />
+                  オンライン完結のマンツーマン指導だから、どこでも学びやすい。<br />
+                  現役エンジニア講師が伴走してサポートするので、未経験の方でも安心。<br />
+                  半年後、「できるようになった自分」に出会えます。
+                </p>
+              </div>
+              <div class="about-img">
+                <img src="img/about.jpg" alt="学習風景" />
+              </div>
+            </div>
+          </div>
+        </section>
+      </section>
 
-      <section class="voice"></section>
+      <section id="voice" class="voice">
+        <div class="section-wrapper">
+          <div class="section-header">
+            <p class="section-subtitle">Graduate Voices</p>
+            <h2 class="section-title">卒業生の声</h2>
+          </div>
+
+          <div class="voice-list">
+            <div class="voice-item">
+              <div class="voice-icon">
+                <img src="img/voice1.JPG" alt="30代女性" />
+              </div>
+              <p class="voice-age">30代前半<br />2023年5月入会</p>
+              <p class="voice-text">
+                １対１での質問が出来るとき聞いてプロナビに入り、実際２ヶ月間ほど１対１で毎週教えていただきました。案件獲得も３度ほど打ち合わせに同行いただいたため、案件の進め方も教えていただきました。
+              </p>
+            </div>
+
+            <div class="voice-item">
+              <div class="voice-icon">
+                <img src="img/voice2.JPG" alt="20代女性" />
+              </div>
+              <p class="voice-age">20代後半<br />2022年6月入会</p>
+              <p class="voice-text">
+                マンツーマンで授業をしてもらい、疑問を一緒に解決してもらえるだけではなく、課題があるので自分で調べたり考えたりする力もついたと思います。案件に向けてもきめ細かいサポートもあるので、プロナビで学習できてよかったです！
+              </p>
+            </div>
+
+            <div class="voice-item">
+              <div class="voice-icon">
+                <img src="img/voice3.JPG" alt="20代女性" />
+              </div>
+              <p class="voice-age">20代後半<br />2023年4月入会</p>
+              <p class="voice-text">
+                何人かとお話をしてみて、信頼できる！と感じたので入会しましたが、案件獲得までこんなにサポートしてもらえるなんてびっくりです！みなさんと出会えて本当にしあわせです！
+              </p>
+            </div>
+
+            <div class="voice-item">
+              <div class="voice-icon">
+                <img src="img/voice4.JPG" alt="20代男性" />
+              </div>
+              <p class="voice-age">20代後半<br />2023年8月入会</p>
+              <p class="voice-text">
+                副業からフリーランスになりたいと思って入会しました。優しく向上心が高い方が多いので、初心者の私でも挫折せずに進められましたし、今までの自分からは考えられない全く別の職種が広がり、考え方や人生観も変わりました
+              </p>
+            </div>
+          </div>
+        </div>
+      </section>
 
       <section class="reason" id="reason">
         <div class="section-wrapper">
@@ -121,8 +193,12 @@
                 <img src="img/reason1.jpg" />
                 <div class="reason-text">
                   <p>専属コンサルタントは、現役のプロエンジニア。</p>
-                  <p>学習目標の設定から、最適な学習プランの提案、日々のモチベーションサポートまで、あなたの成長に本気で寄り添います。</p>
-                  <p>性格診断をもとに、あなたに最も合うコンサルタントが担当します。</p>
+                  <p>
+                    学習目標の設定から、最適な学習プランの提案、日々のモチベーションサポートまで、あなたの成長に本気で寄り添います。
+                  </p>
+                  <p>
+                    性格診断をもとに、あなたに最も合うコンサルタントが担当します。
+                  </p>
                 </div>
               </div>
             </div>
@@ -138,9 +214,13 @@
               <div class="reason-content">
                 <img src="img/reason2.jpg" />
                 <div class="reason-text">
-                  <p>効率的にスキルを伸ばすために、毎週の課題と学習進捗を一緒に管理します。</p>
+                  <p>
+                    効率的にスキルを伸ばすために、毎週の課題と学習進捗を一緒に管理します。
+                  </p>
                   <p>わからないことは、公式LINEから24時間いつでも質問OK。</p>
-                  <p>つまずきをその場で解決しながら、安心して学びを進められます。</p>
+                  <p>
+                    つまずきをその場で解決しながら、安心して学びを進められます。
+                  </p>
                 </div>
               </div>
             </div>
@@ -156,8 +236,12 @@
               <div class="reason-content">
                 <img src="img/reason3.jpg" />
                 <div class="reason-text">
-                  <p>学習後は、実際に案件を獲得するための実践的なサポートを行います。</p>
-                  <p>プロの営業担当が商談に同行し、リアルな営業の流れを体感。実際に受注した案件に関するフォローも行うため、安心して一歩を踏み出せます。</p>
+                  <p>
+                    学習後は、実際に案件を獲得するための実践的なサポートを行います。
+                  </p>
+                  <p>
+                    プロの営業担当が商談に同行し、リアルな営業の流れを体感。実際に受注した案件に関するフォローも行うため、安心して一歩を踏み出せます。
+                  </p>
                 </div>
               </div>
             </div>
@@ -174,9 +258,8 @@
           <div class="section-header">
             <p class="section-subtitle">instructors</p>
             <h2 class="section-title">講師紹介</h2>
-          </div> 
+          </div>
         </div>
-        
       </section>
 
       <section class="support"></section>
