--- a/index.html
+++ b/index.html
@@ -97,9 +97,10 @@
         <div class="hero">
           <div class="fade-bg"></div>
         </div>
+        
       </section>
 
-      <section class="about">
+      
         <section id="about" class="about">
           <div class="section-wrapper">
             <div class="about-inner">
@@ -122,51 +123,55 @@
             </div>
           </div>
         </section>
-      </section>
 
       <section id="voice" class="voice">
         <div class="section-wrapper">
-          <div class="section-header">
-            <p class="section-subtitle">Graduate Voices</p>
-            <h2 class="section-title">卒業生の声</h2>
-          </div>
+            <p class="right-section-subtitle">Graduate Voices</p>
+            <h2 class="right-section-title">卒業生の声</h2>          
 
-          <div class="voice-list">
-            <div class="voice-item">
-              <div class="voice-icon">
-                <img src="img/voice1.JPG" alt="30代女性" />
-              </div>
-              <p class="voice-age">30代前半<br />2023年5月入会</p>
+        <div class="voice-list">
+          <div class="voice-item">
+            <div class="voice-icon">
+              <img src="img/voice1.JPG" alt="30代男性" />
+            </div>
+            <div class="voice-box">
+              <p class="voice-age">30代前半/男性<br />2023年5月入会</p>
               <p class="voice-text">
                 １対１での質問が出来るとき聞いてプロナビに入り、実際２ヶ月間ほど１対１で毎週教えていただきました。案件獲得も３度ほど打ち合わせに同行いただいたため、案件の進め方も教えていただきました。
               </p>
             </div>
+          </div>
 
-            <div class="voice-item">
-              <div class="voice-icon">
-                <img src="img/voice2.JPG" alt="20代女性" />
-              </div>
-              <p class="voice-age">20代後半<br />2022年6月入会</p>
+          <div class="voice-item">
+            <div class="voice-icon">
+              <img src="img/voice2.JPG" alt="20代女性" />
+            </div>
+            <div class="voice-box">
+              <p class="voice-age">20代後半/女性<br />2022年6月入会</p>
               <p class="voice-text">
                 マンツーマンで授業をしてもらい、疑問を一緒に解決してもらえるだけではなく、課題があるので自分で調べたり考えたりする力もついたと思います。案件に向けてもきめ細かいサポートもあるので、プロナビで学習できてよかったです！
               </p>
             </div>
+          </div>
 
-            <div class="voice-item">
-              <div class="voice-icon">
-                <img src="img/voice3.JPG" alt="20代女性" />
-              </div>
-              <p class="voice-age">20代後半<br />2023年4月入会</p>
+          <div class="voice-item">
+            <div class="voice-icon">
+              <img src="img/voice3.JPG" alt="20代女性" />
+            </div>
+            <div class="voice-box">
+              <p class="voice-age">20代後半/女性<br />2023年4月入会</p>
               <p class="voice-text">
                 何人かとお話をしてみて、信頼できる！と感じたので入会しましたが、案件獲得までこんなにサポートしてもらえるなんてびっくりです！みなさんと出会えて本当にしあわせです！
               </p>
             </div>
+          </div>
 
-            <div class="voice-item">
-              <div class="voice-icon">
-                <img src="img/voice4.JPG" alt="20代男性" />
-              </div>
-              <p class="voice-age">20代後半<br />2023年8月入会</p>
+          <div class="voice-item">
+            <div class="voice-icon">
+              <img src="img/voice4.JPG" alt="20代男性" />
+            </div>
+            <div class="voice-box">
+              <p class="voice-age">20代前半/男性<br />2023年8月入会</p>
               <p class="voice-text">
                 副業からフリーランスになりたいと思って入会しました。優しく向上心が高い方が多いので、初心者の私でも挫折せずに進められましたし、今までの自分からは考えられない全く別の職種が広がり、考え方や人生観も変わりました
               </p>
