“メインビジュアル修正”

--- a/index.html
+++ b/index.html
@@ -97,7 +97,13 @@
         <div class="hero">
           <div class="fade-bg"></div>
         </div>
-        
+
+        <div class="mainvisual-items">
+          <img src="img/m-items1.PNG" class="rate-1" alt="99%">
+          <img src="img/m-items2.PNG" class="rate-2" alt="93%">
+          <img src="img/m-items3.PNG" class="rate-3" alt="1%">
+        </div>
+
       </section>
 
       
