“study記入しました”

--- a/index.html
+++ b/index.html
@@ -260,7 +260,38 @@
         </div>
       </section>
 
-      <section class="study"></section>
+      <section class="study">
+        <div class="section-wrapper">
+          <div class="study-title">
+            <p class="study-subtitle">プログラミングスキルの習得には</p>
+            <h2 class="study-main-title">学習生産性✖️学習時間</h2>
+            <p>の最大化が不可欠</p>
+          </div>
+          <div class="studt-item">
+            <div class="study-text">
+              <p>あなたの課題を分析し、最も効果的な学習を提案します。<br>
+                プログラミングを効率よく身につけるには、“目的を意識して学ぶ”ことが大切です。<br>
+                ProNaviでは、あなたの現在のスキルや目標を丁寧に分析し、無駄のない学習プランで成長を最短化します。</p>
+              <p>続けられる環境が、確実な成長を生み出す。<br>
+                学習の継続こそが、スキルアップの最大のカギ。<br>
+                ProNaviでは、あなたの生活リズムに合わせたスケジュール設計と、コーチからの毎日のメッセージサポートで、学習を習慣化します。</p>
+            </div>
+            <div class="study-text2">
+              <p>（質疑応答の例）</p>
+              <p>24時間LINEにて気軽に質問が出来ます。<br>
+                わからない所があってもすぐに解決することでしっかりと学習内容が身につきます。</p>
+            </div>
+        </div>
+          <div class="study-characters">
+            <img src="img/study1.svg">
+          </div>
+          <div class="study-phones">
+            <img src="...">
+            <img src="..." alt="">
+            <img src="..." alt="">
+          </div>
+        </div>
+      </section>
 
       <section class="flow"></section>
 
