--- a/index.html
+++ b/index.html
@@ -260,7 +260,7 @@
         </div>
       </section>
 
-      <section class="study">
+      <section class="study" id="study">
         <div class="section-wrapper">
           <div class="study-title">
             <p class="study-subtitle">プログラミングスキルの習得には</p>
@@ -286,9 +286,9 @@
             <img src="img/study1.svg">
           </div>
           <div class="study-phones">
-            <img src="...">
-            <img src="..." alt="">
-            <img src="..." alt="">
+            <img src="img/line1.jpg">
+            <img src="img/line2.jpg">
+            <img src="img/line3.jpg">
           </div>
         </div>
       </section>
