“卒業生の声追加”

--- a/index.html
+++ b/index.html
@@ -435,6 +435,25 @@
             <div><img src="img/support4.png"></div>
             <div><img src="img/support5.png"></div>
           </div>
+        
+          <!-- 卒業生の実績 -->
+          <div class="graduate-achievements">
+            <div class="section-wrapper">
+              <div class="section-header">
+                <p class="section-subtitle">Graduate Achievements</p>
+                <h2 class="section-title">卒業生の声</h2>
+              </div>
+            
+              <div class="graduate-achievements-slider section-wrapper">
+                <div><img src="img/achievement1.png"></div>
+                <div><img src="img/achievement2.png"></div>
+                <div><img src="img/achievement3.png"></div>
+                <div><img src="img/achievement4.png"></div>
+                <div><img src="img/achievement5.png"></div>
+                <div><img src="img/achievement6.png"></div>
+              </div>
+            </div>
+          </div>
         </div>
       </section>
 
