--- a/index.html
+++ b/index.html
@@ -457,7 +457,35 @@
         </div>
       </section>
 
-      <section class="price"></section>
+      <!-- 料金 -->
+      <section class="price" id="price">
+        <div class="price-head section-wrapper">
+          <p class="right-section-subtitle">Pricing</p>
+          <h2 class="right-section-title">料金</h2> 
+        </div>
+
+        <div class="price-container">
+          <div class="price-contents section-wrapper">
+            <h3 class="price-title">６ヶ月間集中プログラム</h3>
+            <ul class="price-content">
+                <li>24時間質問対応</li>
+                <li>あなただけの学習スケジュールを作成</li>
+                <li>定期的な講義で苦手を克服</li>
+                <li>学習スケジュール作成と習慣化のサポート</li>
+            </ul>
+            <div class="price-detail">
+              <p class="price-detail-left">総額</p>
+              <span>550,000円</span>
+              <p class="price-detail-right">（税込）</p>
+            </div>
+          </div>
+        </div>
+      </section>
+
+      <!-- 質問 -->
+      <section class="faq" id="faq">
+
+      </section>
     </main>
 
     <footer></footer>
