--- a/index.html
+++ b/index.html
@@ -26,6 +26,10 @@
       href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined"
       rel="stylesheet"
     />
+    <!-- ⇩試し 質問の吹き出し出すための設定-->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
+
+
     <link rel="stylesheet" href="css/style.css" />
     <!-- slick -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.9.0/slick.min.css">
@@ -441,7 +445,7 @@
             <div class="section-wrapper">
               <div class="section-header">
                 <p class="section-subtitle">Graduate Achievements</p>
-                <h2 class="section-title">卒業生の声</h2>
+                <h2 class="section-title">卒業生の実績</h2>
               </div>
             
               <div class="graduate-achievements-slider section-wrapper">
@@ -483,8 +487,94 @@
       </section>
 
       <!-- 質問 -->
-      <section class="faq" id="faq">
+      <section class="faq-section section-wrapper" id="faq">
+        <div class="section-header">
+          <p class="section-subtitle">FAQ</p>
+          <h2 class="section-title">質問</h2>
+        </div>
 
+        <div class="faq-contents">
+          <div class="faq active">
+            <h3 class="faq-title">
+              Q1<br>従来のプログラミングスクールとは何が違いますか？
+            </h3>
+            <p class="faq-text">
+              プログラミングスクールの多くは「コードを知る」ことに主眼をおいていますが、
+              プロナビでは模写コーディングを含む複数のトレーニングを組み合わせてお客様ごとの最適カリキュラムをご提案します。
+              また、日々の学習を支援する多彩なサポートを用意しています。
+            </p>
+            <button class="faq-toggle">
+              <i class="fas fa-chevron-down"></i>
+              <i class="fas fa-times"></i>
+            </button>
+          </div>
+          
+          <div class="faq active">
+            <h3 class="faq-title">
+              Q2<br>どんな教材を使用しますか？
+            </h3>
+            <p class="faq-text">
+              当社が厳選した市販教材とオリジナル教材の中から、お客様にとって最適な組み合わせをご提案します。
+              どのような教材を用いるかは無料カウンセリングにてお問い合わせください。
+            </p>
+            <button class="faq-toggle">
+              <i class="fas fa-chevron-down"></i>
+              <i class="fas fa-times"></i>
+            </button>
+          </div>
+
+          <div class="faq active">
+            <h3 class="faq-title">
+              Q3<br>専属コンサルタントは変えられますか？
+            </h3>
+            <p class="faq-text">
+              可能です。ご希望の場合は、公式事務局LINEまでお問い合わせください。
+            </p>
+            <button class="faq-toggle">
+              <i class="fas fa-chevron-down"></i>
+              <i class="fas fa-times"></i>
+            </button>
+          </div>
+
+          <div class="faq active">
+            <h3 class="faq-title">
+              Q4<br>パソコンは必要ですか？
+            </h3>
+            <p class="faq-text">
+              プログラミングの学習ではパソコンは必須になります。貸し出しなどは行っていないため、ご用意必要になります。
+            </p>
+            <button class="faq-toggle">
+              <i class="fas fa-chevron-down"></i>
+              <i class="fas fa-times"></i>
+            </button>
+          </div>
+
+          <div class="faq active">
+            <h3 class="faq-title">
+              Q5<br>学習時間が確保できるか不安ですが、大丈夫ですか？
+            </h3>
+            <p class="faq-text">
+              ご安心ください。多くの方が最初は不安を感じていますが、専属コンサルタントのタイムマネジメントやモチベーション管理などのきめ細かいサポートで、実際に激務の中で働いている方もプログラミングスキルを向上されています。
+            </p>
+            <button class="faq-toggle">
+              <i class="fas fa-chevron-down"></i>
+              <i class="fas fa-times"></i>
+            </button>
+          </div>
+
+          <div class="faq active">
+            <h3 class="faq-title">
+              Q6<br>校舎に通うのが難しいのですが、大丈夫ですか？
+            </h3>
+            <p class="faq-text">
+              基本的にオンライン受講となっています。対面受講の場合と同等のプログラミングスキル上達の実績を上げております。
+            </p>
+            <button class="faq-toggle">
+              <i class="fas fa-chevron-down"></i>
+              <i class="fas fa-times"></i>
+            </button>
+          </div>
+        </div>
       </section>
     </main>
 
