“質問アコーディオン修正”

--- a/index.html
+++ b/index.html
@@ -494,7 +494,7 @@
         </div>
 
         <div class="faq-contents">
-          <div class="faq active">
+          <div class="faq">
             <h3 class="faq-title">
               Q1<br>従来のプログラミングスクールとは何が違いますか？
             </h3>
@@ -509,7 +509,7 @@
             </button>
           </div>
           
-          <div class="faq active">
+          <div class="faq">
             <h3 class="faq-title">
               Q2<br>どんな教材を使用しますか？
             </h3>
@@ -523,7 +523,7 @@
             </button>
           </div>
 
-          <div class="faq active">
+          <div class="faq">
             <h3 class="faq-title">
               Q3<br>専属コンサルタントは変えられますか？
             </h3>
@@ -536,7 +536,7 @@
             </button>
           </div>
 
-          <div class="faq active">
+          <div class="faq">
             <h3 class="faq-title">
               Q4<br>パソコンは必要ですか？
             </h3>
@@ -549,7 +549,7 @@
             </button>
           </div>
 
-          <div class="faq active">
+          <div class="faq">
             <h3 class="faq-title">
               Q5<br>学習時間が確保できるか不安ですが、大丈夫ですか？
             </h3>
@@ -562,7 +562,7 @@
             </button>
           </div>
 
-          <div class="faq active">
+          <div class="faq">
             <h3 class="faq-title">
               Q6<br>校舎に通うのが難しいのですが、大丈夫ですか？
             </h3>
