--- a/index.html
+++ b/index.html
@@ -298,7 +298,12 @@
         </div>
       </section>
 
-      <section class="flow"></section>
+      <section class="flow">
+        <div class="section-wrapper">
+          <p class="section-subtitle">Flow</p>
+          <h2 class="section-title">受講の流れ</h2>
+        </div>
+      </section>
 
       <section class="instructors">
         <div class="section-wrapper">
