--- a/index.html
+++ b/index.html
@@ -298,10 +298,44 @@
         </div>
       </section>
 
-      <section class="flow">
+      <section class="flow" id="flow">
         <div class="section-wrapper">
           <p class="section-subtitle">Flow</p>
           <h2 class="section-title">受講の流れ</h2>
+          <div class="flow-container">
+            <div class="flow-item">
+              <h5 class="item-title">Step1 スタートミーティング</h5>
+              <img src="img/flow1.jpg">
+              <p>スキル診断と学習方針の決定後、あなた専属のコーチが担当に就きます。<br>
+                現在のレベルをもとに、最適な指導ができるコーチをマッチング。<br>
+                あなたの学習を最初から最後までサポートします。</p>
+            </div>
+            <div class="flow-item2">
+              <h5 class="item-title">Step2 毎日の学習</h5>
+              <img src="img/flow2.jpg">
+              <p>プログラミングスキルの向上には、日々の積み重ねが欠かせません。<br>
+                専属コーチとのLINE連携により、疑問をその場で解消しながら、効率的に学習を進めていただけます。</p>
+            </div>
+            <div class="flow-item3">
+              <h5 class="item-title">Step3 週１回の授業</h5>
+              <img src="img/flow3.jpg">
+              <p>週1回の専属コーチ授業で、成長の進捗と課題を確認。<br>
+                学習内容の理解度をチェックし、つまずいた部分は丁寧に解説。<br>
+                次回までに取り組む課題を明確にし、着実なステップアップをサポートします。</p>
+            </div>
+            <div class="flow-item4">
+              <h5 class="item-title">Step4 学習の継続のサポート</h5>
+              <img src="img/flow4.jpg">
+              <p>日々の学習と授業を重ねながら、スキルを定着させていきます。<br>
+                習慣として学びが身についたタイミングで、次のステップである案件獲得フェーズへ進みます。</p>
+            </div>
+            <div class="flow-item5">
+              <h5 class="item-title">Step5 案件獲得も徹底サポート</h5>
+              <img src="img/flow5.jpg">
+              <p>スキル習得後は、実際に案件獲得に向けて行動を開始します。<br>
+                プロの営業担当が営業の同行や代行を行い、あなたの初案件獲得をしっかりとサポートします。</p>
+            </div>
+          </div>
         </div>
       </section>
 
