“インストラクター入力”

--- a/index.html
+++ b/index.html
@@ -342,8 +342,17 @@
       <section class="instructors">
         <div class="section-wrapper">
           <div class="section-header">
-            <p class="section-subtitle">instructors</p>
-            <h2 class="section-title">講師紹介</h2>
+            <p class="right-section-subtitle">instructors</p>
+            <h2 class="right-section-title">講師紹介</h2>
+          </div>
+          <div class="instructors-container">
+            <div class="instructors-item">
+              <h5 class="instructors-nema">トップ講師 加藤 夕騎</h5>
+              <p>お客様1人ひとりの目的や課題に合った組み合わせをカリキュラムとして提供します。<br>
+                プロナビは複数の最適化されたプログラミング学習トレーニングの中から、お客さま一人ひとりの目的や課題に合った組み合わせをカリキュラムとして提供します。br
+                それぞれのトレーニングを構築する際は、学術的な調査はもちろんのこと、学習の中で本当に効果があるのかをコンサルタント・お客さまなど様々な視点から十分な時間をかけて検証した上で展開しています。四半期に一度、カリキュラムを全社的にアップデートするイベントを設けており、トレーニングやカリキュラムを常に進化させ続けています。</p>
+                <img src="">
+            </div>
           </div>
         </div>
       </section>
