“インストラクター変更”

--- a/index.html
+++ b/index.html
@@ -339,7 +339,7 @@
         </div>
       </section>
 
-      <section class="instructors">
+      <section class="instructors" id="instructors">
         <div class="section-wrapper">
           <div class="section-header">
             <p class="right-section-subtitle">instructors</p>
@@ -347,11 +347,39 @@
           </div>
           <div class="instructors-container">
             <div class="instructors-item">
-              <h5 class="instructors-nema">トップ講師 加藤 夕騎</h5>
-              <p>お客様1人ひとりの目的や課題に合った組み合わせをカリキュラムとして提供します。<br>
-                プロナビは複数の最適化されたプログラミング学習トレーニングの中から、お客さま一人ひとりの目的や課題に合った組み合わせをカリキュラムとして提供します。br
-                それぞれのトレーニングを構築する際は、学術的な調査はもちろんのこと、学習の中で本当に効果があるのかをコンサルタント・お客さまなど様々な視点から十分な時間をかけて検証した上で展開しています。四半期に一度、カリキュラムを全社的にアップデートするイベントを設けており、トレーニングやカリキュラムを常に進化させ続けています。</p>
-                <img src="">
+              <div class="instructors-content">
+                <p>トップ講師 加藤 夕騎<br>
+                  お客様1人ひとりの目的や課題に合った組み合わせをカリキュラムとして提供します。<br>
+                  プロナビは複数の最適化されたプログラミング学習トレーニングの中から、お客さま一人ひとりの目的や課題に合った組み合わせをカリキュラムとして提供します。br
+                  それぞれのトレーニングを構築する際は、学術的な調査はもちろんのこと、学習の中で本当に効果があるのかをコンサルタント・お客さまなど様々な視点から十分な時間をかけて検証した上で展開しています。四半期に一度、カリキュラムを全社的にアップデートするイベントを設けており、トレーニングやカリキュラムを常に進化させ続けています。</p>                  <img src="img/teacher.jpg">
+              </div>
+            </div>
+            <div class="instructors-item2">
+              <div class="instructors-content2">
+                <p>現役エンジニア講師 TESTU<br>
+                  その人にとって継続可能かつ、 着実にスキルをつけられるような学習方法を 一緒に探し続けます。<br>
+                  プログラミング学習は筋トレに似ていると思います。人それぞれ体格も違えば、やるべき事も変わってくる。間違ったやり方で筋トレをし続けても結果には繋がりにくい。正しいやり方と継続がとても重要です。<br>
+                  その人にとって継続可能かつ、しっかり最適な負荷をかけ続ける学習方法を一緒に探し続けます！</p>
+                  <img src="img/teacher1.jpg">
+              </div>
+            </div>
+            <div class="instructors-item3">
+              <div class="instructors-content">
+                <p>現役エンジニア講師 YURIKO<br>
+                  プログラミングスキルを習得するには 環境×覚悟が必要だと思っています。<br>
+                  世の中には数多くの学習教材や学習方法が溢れていますが、プロナビはあなたの目標を最短で達成するためにはどの手段を取ることが正しいのか、忙しいあなたでも学習が継続できるような仕組みや環境を提供します。<br>
+                  「スキルを伸ばす」その覚悟を持っていただければ、私たちコンサルタント一同、全力で、最短でプログラミングスキルを伸ばすサポートをさせていただきます！</p>
+                  <img src="img/teacher2.jpg">
+              </div>
+            </div>
+            <div class="instructors-item4">
+              <div class="instructors-content2">
+                <p>現役エンジニア講師 AOKI<br>
+                  卒業後も自分の力で成長していけるような 学習スキルも同時に身につけて欲しい<br>
+                  プログラミングは多くの言語があり、使われる言語の変化も早いです。<br>
+                  そのため、実際に仕事をするときに新しい知識が必要になってくることもあるため、ただ覚えるだけではなく、自分の力で学習を進めていく能力も半年間を通して身につけていただきたいと思っています。</p>
+                  <img src="img/teacher3.jpg">
+              </div>
             </div>
           </div>
         </div>
