“インストラクター変更”

--- a/index.html
+++ b/index.html
@@ -353,15 +353,19 @@
               <div class="instructors-content">
                 <p>トップ講師 加藤 夕騎<br>
                   お客様1人ひとりの目的や課題に合った組み合わせをカリキュラムとして提供します。<br>
-                  プロナビは複数の最適化されたプログラミング学習トレーニングの中から、お客さま一人ひとりの目的や課題に合った組み合わせをカリキュラムとして提供します。br
-                  それぞれのトレーニングを構築する際は、学術的な調査はもちろんのこと、学習の中で本当に効果があるのかをコンサルタント・お客さまなど様々な視点から十分な時間をかけて検証した上で展開しています。四半期に一度、カリキュラムを全社的にアップデートするイベントを設けており、トレーニングやカリキュラムを常に進化させ続けています。</p>                  <img src="img/teacher.jpg">
+                  プロナビは複数の最適化されたプログラミング学習トレーニングの中から、お客さま一人ひとりの目的や課題に合った組み合わせをカリキュラムとして提供します。<br>
+                  それぞれのトレーニングを構築する際は、学術的な調査はもちろんのこと、学習の中で本当に効果があるのかをコンサルタント・お客さまなど様々な視点から十分な時間をかけて検証した上で展開しています。<br>
+                  四半期に一度、カリキュラムを全社的にアップデートするイベントを設けており、トレーニングやカリキュラムを常に進化させ続けています。</p> 
+                  <img src="img/teacher.jpg">
               </div>
             </div>
             <div class="instructors-item2">
               <div class="instructors-content2">
                 <p>現役エンジニア講師 TESTU<br>
                   その人にとって継続可能かつ、 着実にスキルをつけられるような学習方法を 一緒に探し続けます。<br>
-                  プログラミング学習は筋トレに似ていると思います。人それぞれ体格も違えば、やるべき事も変わってくる。間違ったやり方で筋トレをし続けても結果には繋がりにくい。正しいやり方と継続がとても重要です。<br>
+                  プログラミング学習は筋トレに似ていると思います。<br>
+                  人それぞれ体格も違えば、やるべき事も変わってくる。<br>
+                  間違ったやり方で筋トレをし続けても結果には繋がりにくい。正しいやり方と継続がとても重要です。<br>
                   その人にとって継続可能かつ、しっかり最適な負荷をかけ続ける学習方法を一緒に探し続けます！</p>
                   <img src="img/teacher1.jpg">
               </div>
