--- a/index.html
+++ b/index.html
@@ -399,6 +399,10 @@
 
             <!-- our support -->
       <section id="support">
+        <div class="bg-logo">
+            <p>Pro Navi</p>
+        </div>
+
         <div class="support-head-bg">
           <img src="img/support_bg.svg">
         </div>
@@ -525,6 +529,10 @@
             <div><img src="img/support5.png"></div>
           </div>
         
+          <a href="#" class="support-btn btn-gradient section-wrapper">
+            <span>無料カウンセリングを予約する</span>
+          </a>
+
           <!-- 卒業生の実績 -->
           <div class="graduate-achievements">
             <div class="section-wrapper">
@@ -570,6 +578,11 @@
           </div>
         </div>
       </section>
+
+
+      <a href="#" class="price-btn btn-gradient section-wrapper">
+        <span>無料カウンセリングを予約する</span>
+      </a>
 
       <!-- 質問 -->
       <section class="faq-section section-wrapper" id="faq">
@@ -663,9 +676,11 @@
       </section>
     </main>
 
+    <a href="#" class="button_top">TOP</a>
+
     <footer>
       <div class="footer-img-box">
-        <img src="img/footer3.svg">
+        <img src="img/footer4.svg">
       </div>
       
       <div class="footer-info">
