“レスポンシブ調整”

--- a/index.html
+++ b/index.html
@@ -88,6 +88,13 @@
           </a>
         </div>
       </div>
+
+<!-- ハンバーガー -->
+    <div class="hamburger">
+      <span></span>
+      <span></span>
+      <span></span>
+    </div>
     </header>
 
     <main>
@@ -110,7 +117,6 @@
           <img src="img/m-items2.PNG" class="rate-2" alt="93%">
           <img src="img/m-items3.PNG" class="rate-3" alt="1%">
         </div>
-
       </section>
 
       
