“スムーススクロール追加”

--- a/index.html
+++ b/index.html
@@ -528,11 +528,26 @@
           <!-- wrapper 閉じ -->
 
           <div class="support-slider">
-            <div><img src="img/support1.png"></div>
-            <div><img src="img/support2.png"></div>
-            <div><img src="img/support3.png"></div>
-            <div><img src="img/support4.png"></div>
-            <div><img src="img/support5.png"></div>
+            <div class="img-wrap">
+              <div class="img-bg"></div>
+              <img src="img/support1.png">
+            </div>
+            <div class="img-wrap">
+              <div class="img-bg"></div>
+              <img src="img/support2.png">
+            </div>
+            <div class="img-wrap">
+              <div class="img-bg"></div>
+              <img src="img/support3.png">
+            </div>
+            <div class="img-wrap">
+              <div class="img-bg"></div>
+              <img src="img/support4.png">
+            </div>
+            <div class="img-wrap">
+              <div class="img-bg"></div>
+              <img src="img/support5.png">
+            </div>
           </div>
         
           <a href="#" class="support-btn btn-gradient section-wrapper">
