--- a/index.html
+++ b/index.html
@@ -89,16 +89,17 @@
         </div>
       </div>
 
-<!-- ハンバーガー -->
-    <div class="hamburger">
-      <span></span>
-      <span></span>
-      <span></span>
-    </div>
+      <div class="hamburger">
+        <span></span>
+        <span></span>
+        <span></span>
+      </div>
+
+      <div id="mask"></div>
     </header>
 
     <main>
-      <section class="mainvisual">
+<section class="mainvisual">
         <div class="main-wrapper">
           <div class="main-text">
             <h2>小さな一歩が<br /><span>未来を変える</span></h2>
@@ -112,11 +113,11 @@
           <div class="fade-bg"></div>
         </div>
 
-        <div class="mainvisual-items">
+        <!-- <div class="mainvisual-items">
           <img src="img/m-items1.PNG" class="rate-1" alt="99%">
           <img src="img/m-items2.PNG" class="rate-2" alt="93%">
           <img src="img/m-items3.PNG" class="rate-3" alt="1%">
-        </div>
+        </div> -->
       </section>
 
       
@@ -141,6 +142,10 @@
               </div>
             </div>
           </div>
+
+          <a href="#" class="about-btn btn-gradient section-wrapper">
+            <span>無料カウンセリングを予約する</span>
+          </a>
         </section>
 
       <section id="voice" class="voice">
